[tool.poetry]
name = "geohack"
version = "0.1.0"
description = ""
authors = ["HideBa <baba.papa1120.ba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0" }
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.25"
alembic = "^1.7.3"
python-multipart = "^0.0.5"
psycopg-binary = "^3.0b1"
loguru = "^0.5.3"
line-bot-sdk = "^2.1.0"
pandas = "^1.4.1"
geopandas = "^0.10.2"
jismesh = "^2.1.0"
Shapely = "^1.8.0"
geopy = "^2.2.0"
google-cloud-storage = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
mypy = "^0.910"
pytest = "^6.2.5"
isort = "^5.9.3"
pre-commit = "^2.15.0"
bandit = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
